# avatar_it

./: .gitignore  DEV.md  README.md  pyproject.toml
src/avatar_it/: __init__.py  avatar_it.py  main.py
test/: test.py
